friends page is working with redux now. However I have now a small obvious issue with my display index when added friends jump to current friends which I need to fix. Also the current way Im displaying is not responsive which also needs fixing but the flow is there now

--- a/public/bodystyle.css
+++ b/public/bodystyle.css
@@ -24,6 +24,7 @@ input {
 
 .infotext {
     font-family: "EB Garamond", serif;
+    padding-left: 10px;
 }
 
 button {
